tests/parser/bad/cmodule-transition-id-lparen-rparen-with.scilla
scilla_version 0

contract Test
()

(* Typo *)
transition protected ()
mend
